[package]
name = "vigil-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# 包内唯一 bin 是 vigils;default-run 让裸 `cargo run` 指向它,明确"主二进制 = vigils"。
# (v0.1.1 曾用此修 WiX ICE30 多-bin 重复组件;v0.1.2 移除 CLI bin 后包内仅 1 bin,保留更清晰。)
# v0.1.5:bin 由 `gui` 改名 `vigils` —— 安装后可执行文件/进程名从不知所云的 `gui.exe`
# 变为品牌一致的 `vigils.exe`(productName 仍 "Vigils";macOS 仍 Vigils.app)。
default-run = "vigils"

[lints]
workspace = true

# 包内唯一 bin = GUI(Tauri;feature `gui` 门控,默认关闭 —— `cargo test --workspace` 不编)。
# v0.1.2:原 `vigil-desktop` CLI bin(src/main.rs)已移除,"命令行查账本"能力整合进
# `vigil-hub inspect`。原因:desktop 包含第二个 bin 时,`cargo tauri build`(内部
# `cargo build --bins`)会把它误打进安装包替换真正的 GUI(v0.1.0/v0.1.1 桌面包损坏根因)。
# v0.11 ISS-102/103/104:bin name 对齐 path basename,Tauri v2 bundle 默认查
# `target/release/<path-basename>` 复制 binary;name == path basename == mainBinaryName
# 三者一致(均 `vigils`)让 bundle 找得到。raw build 用 `--bin vigils --features gui`。
[[bin]]
name = "vigils"
path = "src/bin/vigils.rs"
required-features = ["gui"]

[lib]
name = "vigil_desktop"
path = "src/lib.rs"

# feature matrix:
# - 默认(无 feature):仅 lib(CLI dispatch/render 消费层),零 Tauri 依赖,cargo test --workspace 零 regression
# - `gui`:启用 Tauri 2 GUI binary(拉 ~200 transitive crates,仅 `cargo tauri dev` 或
#   `cargo build --features gui` 时触发);v0.5 P1 ADR 0014 α1 起额外拉 vigil-mcp /
#   vigil-firewall / vigil-policy(embed Hub 骨架)。三者全部 optional + dep:* 门控,
#   默认 feature 仍 0 痕迹(`cargo tree --no-default-features` 不出现)。
[features]
default = []
gui = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tokio",
    "dep:dirs",
    "dep:vigil-mcp",
    "dep:vigil-firewall",
    "dep:vigil-policy",
]

[dependencies]
vigil-types = { path = "../../crates/vigil-types" }
vigil-ui-protocol = { path = "../../crates/vigil-ui-protocol" }
vigil-audit = { path = "../../crates/vigil-audit" }
vigil-runner = { path = "../../crates/vigil-runner", default-features = false }
# v0.5 P1 ADR 0014 α1:GUI bin embed Hub 骨架(默认关闭;features = ["gui"] 拉)。
# `vigil-firewall.default-features = false`:防默认拉 ort feature(ISS-008 P2 模型路径,
# 启动 ~7s cold-start;GUI α1 无需 PiiScanner=ort,Firewall::new 走 NoopEngine)。
vigil-mcp = { path = "../../crates/vigil-mcp", optional = true }
vigil-firewall = { path = "../../crates/vigil-firewall", optional = true, default-features = false }
vigil-policy = { path = "../../crates/vigil-policy", optional = true }
clap = { workspace = true }
# gui.rs 用 `#[derive(serde::Serialize)]`;serde_json 不等于 serde namespace
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

# I08b(feature `gui`):Tauri 2 GUI 栈,optional 避免默认拉
tauri = { version = "2", optional = true, default-features = false, features = ["wry"] }
tokio = { workspace = true, optional = true }
# β5:用户数据目录解析(跨平台);仅 gui feature 需要,运行时定位 ledger 持久化路径
dirs = { version = "6", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true, default-features = false , features = [] }

[dev-dependencies]
tempfile = { workspace = true }
vigil-lease = { path = "../../crates/vigil-lease" }
rusqlite = { workspace = true }
